2007-08-05  Torsten Rahn <rahn@kde.org>
	- Applied patch from "Prashanth Udupa" <prashanth.udupa@gmail.com>
	Thanks for the patch and for the awesome blog entry at:
	http://prashanthudupa.livejournal.com/

2007-08-04  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy isue 14: inline methods in public classes.
	* src/lib/placemarkmodel.{h,cpp}: Move all inline methods to .cpp
	file
	* src/lib/PlaceMarkContainer.{h,cpp}: Move all inline methods to
	.cpp file

	Fix Krazy isue 12: validity of i18n calls.
	* src/KdeMainWindow.cpp (exportMapScreenShot): Add a context to
	the i18n call.

	Fix Krazy issue 8: public classes with private members
	* src/lib/MarbleControlBox.{h,cpp}: d-pointerify the private
	members that point to the tabs in the widget.

2007-08-04  Murad Tagirov  <tmurad@gmail.com>

    Added basic support of kml folders. MarbleModel iterates over list
    of kml folders and displays placemarks from each folder. This
    list of folders will be displayed in MarbleControlBox, so user
    will be able to enable/disable desired folder
    * src/lib/placemarkmanager.{h,cpp}
    * src/lib/kml/KMLDocument.{h,cpp}
    * src/lib/kml/KMLContainer.{h,cpp}
    * src/lib/MarbleModel.cpp

    Inherit KMLFeature -> PlaceMark, not KMLPlaceMark -> PlaceMark
    * src/lib/kml/KMLFeature.{h,cpp}
    * src/lib/kml/KMLPlaceMark.h

2007-08-04  Murad Tagirov  <tmurad@gmail.com>

    Refactored KMLContainer parsing. Ignore whitespaces while parsing.
    Added counter for current tag level to avoid parsing of wrong data.
    * src/lib/placemarkmanager.cpp
    * src/lib/kml/KMLDocumentParser.cpp
    * src/lib/kml/KMLContainerParser.{h,cpp}
    * src/lib/kml/KMLPointParser.cpp
    * src/lib/kml/KMLFeatureParser.cpp
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}
    * src/lib/kml/KMLDocument.cpp
    * src/lib/kml/KMLObjectParser.{h,cpp}

    Make PlaceMarkPainter's part which paint using VisiblePlaceMark comile again
    * src/lib/placemarkpainter.{h,cpp}
